--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>Chuanguang Yang</title>
-    <meta content="Chuanguang Yang, https://winycg.github.io" name="keywords">
+    <meta content="Chuanguang Yang, https://HLBayes.github.io" name="keywords">
     <style media="screen" type="text/css">
         html,
         body,
