--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Chuanguang Yang</title>
-    <meta content="Chuanguang Yang, https://libohuang" name="keywords">
+    <title>Libo Huang</title>
+    <meta content="Libo Huang, https://libohuang.github.io" name="keywords">
     <style media="screen" type="text/css">
         html,
         body,
