--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <img title="implus" style="float: left; padding-left: .01em; height: 130px;"
              src="./resources/images/me.jpg">
         <div style="padding-left: 12em; vertical-align: top; height: 120px;">
-            <span style="line-height: 150%; font-size: 20pt;">Chuanguang Yang (杨传广)</span><br>
+            <span style="line-height: 150%; font-size: 20pt;">LiboHuang (黄礼泊)</span><br>
             <span> Institute of Computing Technology, Chinese Academy of Sciences (ICT, CAS)</span><br>
 <span><strong>Address</strong>: No.6 Kexueyuan South Road Zhongguancun,Haidian District Beijing,China</span><br>
             <span><strong>Email</strong>: yangchuanguang@ict.ac.cn </span> <br>
